sqlanywhere-server/tests/standalone/snapshots/tests__standalone__attach__attach_auth-2.snap
---
source: sqlanywhere-server/tests/standalone/attach.rs
expression: "txn.execute(\"ATTACH DATABASE bar as bar\", ()).await.unwrap_err()"
snapshot_kind: text
---
Hrana(
    Api(
        "status=403 Forbidden, body={\"error\":\"Authorization forbidden: Current session doesn't not have AttachRead permission to namespace bar\"}",
    ),
)
