sqlanywhere-server/tests/standalone/snapshots/tests__standalone__attach__attach_auth-3.snap
---
source: sqlanywhere-server/tests/standalone/attach.rs
expression: "bar_conn.execute(\"ATTACH foo as foo\", ()).await.unwrap_err()"
snapshot_kind: text
---
Hrana(
    Api(
        "status=403 Forbidden, body={\"error\":\"Authorization forbidden: Namespace `foo` doesn't allow attach\"}",
    ),
)
