sqlanywhere-server/tests/standalone/snapshots/tests__standalone__attach__attach_auth.snap
---
source: sqlanywhere-server/tests/standalone/attach.rs
expression: "bar_conn.execute(\"ATTACH foo as foo\", ()).await.unwrap_err()"
snapshot_kind: text
---
Hrana(
    Api(
        "status=403 Forbidden, body={\"error\":\"Authorization forbidden: Current session doesn't not have AttachRead permission to namespace foo\"}",
    ),
)
